# optimizing-lawn-mowing

./: CMakeLists.txt  approximation.cpp  fix_solution.cpp
close_enough_tsp/: CMakeLists.txt
close_enough_tsp/src/: BranchNBound.cpp  CETSPSolver.cpp  Data.cpp  ShortestPathSolver.cpp  SolveSocpCplex.cpp
cmake/: FindCGAL.cmake  FindGMP.cmake  FindGecode.cmake  FindIPE.cmake  FindJsonCpp.cmake  FindODBC.cmake  FindORTOOLS.cmake  FindSFML.cmake  FindSQLITE.cmake
mowing/: CMakeLists.txt
mowing/include/mowing/: Christofides.h  ExactOffsetCalculator.h  FeasibleToursFromLowerBound.h  FeketeApproximation.h  LowerBoundSolver.h  TSPSolver.h  definitions.h  mowing_utils.h  tour_utils.h
mowing/src/: Christofides.cpp  ExactOffsetCalculator.cpp  FeasibleToursFromLowerBound.cpp  FeketeApproximation.cpp  LowerBoundSolver.cpp  TSPSolver.cpp  mowing_utils.cpp  tour_utils.cpp
utils/include/utils/: utils.hpp
